# wamda

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
design/: QuickCapture.jsx
src/: accent.ts  ipc.ts  sound.ts  tokens.ts  types.ts  ui.tsx  useSettings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  linear.rs  main.rs  notes.rs  provider.rs  reminders.rs  settings.rs  shortcut.rs  timers.rs  trello.rs  update.rs  windows.rs
src/capture/: Capture.tsx  CaptureInput.tsx  DestinationPicker.tsx  commands.ts  main.tsx
src/settings/: Settings.tsx  Titlebar.tsx  accelerator.ts  main.tsx  widgets.tsx
src/settings/panes/: About.tsx  Appearance.tsx  General.tsx  Integrations.tsx  Setup.tsx  Shortcuts.tsx  Trello.tsx
