[package]
name = "wamda"
version = "0.4.0"
description = "Background quick-capture to Trello"
authors = ["you"]
edition = "2021"

[lib]
name = "wamda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-positioner = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-store = "2.4"
tauri-plugin-autostart = "2.5"
tauri-plugin-opener = "2.5"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
interim = { version = "0.2", features = ["chrono_0_4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4"

[profile.release]
opt-level = 2
strip = true
